# ros-intro-course-workspace-main

Stuff/: project2clipboard.txt  project3clipboard.txt
ros-intro-course-workspace-main/: .gitignore  .gitlab-ci.yml
ros-intro-course-workspace-main/docker/: Dockerfile  entrypoint.sh
ros-intro-course-workspace-main/linux/: start.sh  terminal.sh
ros-intro-course-workspace-main/windows/: start.bat  terminal.bat
ros-intro-course-workspace-main/workspace/project2/: CMakeLists.txt  package.xml  readme.txt
ros-intro-course-workspace-main/workspace/project2/commands/: command1.txt  command2.txt
ros-intro-course-workspace-main/workspace/project2/launch/: turtlebot3_navigation.launch  turtlebot3_navigation.launch~
ros-intro-course-workspace-main/workspace/project2/nodes/: .action_client.py.swp  .turtle_tf_listener.py.swp  action_client.py  main.py  map_listener.py  test.py  turtle_tf_listener.py
ros-intro-course-workspace-main/workspace/project2/src/: .map_listener.py.swp  main.py  (+1 more)
ros-intro-course-workspace-main/workspace/project2_task1/: package.xml  readme.txt
ros-intro-course-workspace-main/workspace/project3/: CMakeLists.txt  package.xml  readme.txt
ros-intro-course-workspace-main/workspace/ros_course_examples/: .CMakeLists.txt.swp  CMakeLists.txt  main.launch  package.xml  package.xml~  rviz_example.rviz
ros-intro-course-workspace-main/workspace/ros_course_examples/launch/: start_tf2_demo.launch
ros-intro-course-workspace-main/workspace/ros_course_project/: CMakeLists.txt
ros-intro-course-workspace-main/workspace/test_gazebo/: package.xml
(+347 files in other folders)
