<?xml version="1.0"?>
<package format="2">
  <name>ros_course_examples</name>
  <version>0.1.0</version>
  <description>The ros_course_examples package Ben is helping me learn this</description>

  <maintainer email="john.t.mann@gmail.com">John Mann</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
